Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108677

macdeployqt tool does not copy networkinformation plugin

XMLWordPrintable

    • macOS
    • 0d08801da (6.4.2), effd3b4d8 (dev), fec918e4f (6.4)

       

      otool -L macdeployTest.app/Contents/MacOS/macdeployTest 
      macdeployTest.app/Contents/MacOS/macdeployTest:
       @loader_path/../Frameworks/QtNetwork.framework/Versions/A/QtNetwork (compatibility version 6.0.0, current version 6.2.4)
      @loader_path/../Frameworks/QtCore.framework/Versions/A/QtCore (compatibility version 6.0.0, current version 6.2.4)
      /System/Library/Frameworks/DiskArbitration.framework/Versions/A/DiskArbitration (compatibility version 1.0.0, current version 1.0.0)
      /System/Library/Frameworks/IOKit.framework/Versions/A/IOKit (compatibility version 1.0.0, current version 275.0.0)
      /usr/lib/libc++.1.dylib (compatibility version 1.0.0, current version 1200.3.0)
      /usr/lib/libSystem.B.dylib (compatibility version 1.0.0, current version 1311.0.0)
      

       

      macdeployqt macdeployTest.app -executable=macdeployTest.app/Contents/MacOS/macdeployTest

       

      ls -la macdeployTest.app/Contents/PlugIns 
      total 0
      drwxr-xr-x   6 User  staff  192 Nov 20 10:58 .
      drwxr-xr-x   9 User  staff  288 Nov 20 10:58 ..
      drwxr-xr-x  12 User  staff  384 Nov 20 10:58 imageformats
      drwxr-xr-x   3 User  staff   96 Nov 20 10:58 platforms
      drwxr-xr-x   3 User  staff   96 Nov 20 10:58 styles
      drwxr-xr-x   4 User  staff  128 Nov 20 10:58 tls
      

       

      Attached simple project with Network component dependency

      Enviroment:
      macOS Big Sur
      version 11.6
      MacBook Pro
      Chip Apple M1
      Memory 16GB
      Qt:
      6.2.3 x86_64
      6.3.2 arm64

        For Gerrit Dashboard: QTBUG-108677
        # Subject Branch Project Status CR V

            manordheim Mårten Nordheim
            evgenpervenenko Evgen Pervenenko
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes